登录功能完成 登录校验功能完成

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -34,8 +34,8 @@
             </div>
             <div class="form-group">
               <div class="col-sm-offset-3 col-sm-6">
-                <button type="submit" class="btn btn-default pull-left">取消</button>
-                <button type="text" class="btn btn-primary pull-right">登录</button>
+                <button type="reset" class="reset btn btn-default pull-left">重置</button>
+                <button type="submit" class="btn btn-primary pull-right">登录</button>
               </div>
             </div>
           </form>
